data/forge_javadoc/1.7.10/processed/net_minecraft_client_gui_GuiResourcePackList.md
# GuiResourcePackList

**Inheritance:** java.lang.Object → net.minecraft.client.gui.GuiSlot → net.minecraft.client.gui.GuiListExtended → net.minecraft.client.gui.GuiResourcePackList

## Class signature

```java
public abstract class GuiResourcePackList extends GuiListExtended
```

## Constructors

- `GuiResourcePackList(Minecraft p_i45055_1_, int p_i45055_2_, int p_i45055_3_, java.util.List p_i45055_4_)`

## Methods

- `protected void drawListHeader(int p_148129_1_, int p_148129_2_, Tessellator p_148129_3_)`
- `java.util.List func_148201_l()`
- `protected abstract java.lang.String func_148202_k()`
- `ResourcePackListEntry getListEntry(int p_148180_1_)`
- `int getListWidth()`
- `protected int getScrollBarX()`
- `protected int getSize()`

## Fields

- `protected java.util.List field_148204_l`
- `protected Minecraft field_148205_k`